--- a/outage-tracker-server/outage-tracker/config/database.yml
+++ b/outage-tracker-server/outage-tracker/config/database.yml
@@ -35,7 +35,7 @@ production:
   database: outage-tracker
   pool: 5
   username: root
-  password: root4mac
+  password: root4amazon
   host: 127.0.0.1
   port: 3306
   socket: /tmp/mysql.sock
