--- a/outage-tracker-server/outage-tracker/Gemfile
+++ b/outage-tracker-server/outage-tracker/Gemfile
@@ -32,6 +32,9 @@ group :doc do
   gem 'sdoc', require: false
 end
 
+# Apple push notification service
+gem 'apns'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
 
