claim disturbance changes

--- a/outage-tracker-client/outagetracker/outagetracker-Info.plist
+++ b/outage-tracker-client/outagetracker/outagetracker-Info.plist
@@ -14,6 +14,9 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
+				<string>ot-icon-58</string>
+				<string>ot-icon-80</string>
+				<string>ot-icon-120</string>
 				<string>ot-icon-retina.png</string>
 				<string>ot-icon.png</string>
 			</array>
